<resources>
    <string name="app_name">File Explorer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="path">path</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="details">Details</string>
</resources>