<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_details"
        android:title="@string/details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view"
        android:title="@string/view"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_list"
                android:orderInCategory="0"
                android:title="@string/list"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_grid"
                android:orderInCategory="1"
                android:title="@string/grid"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>