<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fileexplorer.view.MainActivity">
    <item
        android:id="@+id/action_name"
        android:orderInCategory="0"
        android:title="@string/name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_date"
        android:orderInCategory="1"
        android:title="@string/date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_type"
        android:orderInCategory="2"
        android:title="@string/type"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_size"
        android:orderInCategory="3"
        android:title="@string/size"
        app:showAsAction="never" />

</menu>